ACTUALLY fixed navbar shifting

--- a/styles-level-2.css
+++ b/styles-level-2.css
@@ -1,6 +1,5 @@
 * {
     font-family: "Inter";
-    scrollbar-gutter: stable;
 }
 
 body {
